# 32blit-beta

./: .travis.yml  32blit-config.cmake  32blit-t41.toolchain  32blit.cmake  32blit.toolchain  CMakeLists.txt  CMakeSettings.json  audio_8cpp__incl.md5
.github/workflows/: Emscripten.yml  Stable branch  Visual Studio.yml  cmake-test.yml  cmake.yml
32blit/: CMakeLists.txt
32blit-libretro/: CMakeLists.txt  api.cpp  api.hpp  consts.hpp  main.cpp
32blit-pico/: CMakeLists.txt  audio.cpp  audio_i2s.cpp  audio_pwm.cpp  blit-launch.cpp  blit-launch.hpp  config.h  display.cpp  display.hpp  display_gbacart.cpp  display_none.cpp  display_picodvi.cpp  display_picovision.cpp  display_scanvideo.cpp  display_st7789.cpp  file.cpp  file_fatfs.cpp  file_littlefs.cpp  header.S  input.cpp  input_gbacart.cpp  input_gpio_abxy.cpp  input_picosystem.cpp  input_tufty.cpp  input_usb_hid.cpp  led.cpp  main.cpp  memmap_blit.ld  memmap_blit_loader.ld  sd_card.pio  st7789.cpp  st7789.hpp  startup.S  startup.cpp  storage.cpp  storage.hpp  storage_flash.cpp  storage_none.cpp  storage_sd.cpp  storage_sd_spi.cpp  (+4 more)
32blit-pico/audio/: gbacart.cpp
32blit-pico/board/gbacart/: config.cmake  config.h
32blit-pico/board/pico_dv/: config.cmake  config.h
32blit-pico/board/pimoroni_picovision/: config.cmake
32blit-pico/board/tufty2040/: config.cmake  config.h
32blit-pico/board/vgaboard/: config.h
32blit-pico/board/waveshare_lcd_1_3/: config.cmake  config.h
32blit-pico/display/: gbacart.cpp
32blit-pico/input/: gbacart.cpp
32blit-pico/loader/: CMakeLists.txt
32blit-pico/usb/: host.cpp
32blit-sdl/: 32BlitConfig.cmake  Audio.cpp  CMakeLists.txt  File.cpp  File.hpp  Input.cpp  JPEG.cpp  JPEG.hpp  Main.cpp  Multiplayer.cpp  Multiplayer.hpp  Renderer.cpp  Renderer.hpp  RendererFramebuffer.cpp  SDL2or3.h  System.cpp  System.hpp  UnicornMultiverse.cpp  UnicornMultiverse.hpp  functions.cmake
32blit-stm32/: CMakeLists.txt  STM32H750VBTx.ld  STM32H750VBTx_USER.ld  executable.cmake  startup_stm32h750xx_ext.s  startup_user.cpp  startup_user.s
32blit-stm32/Drivers/STM32H7xx_HAL_Driver/Inc/: stm32h7xx_hal_rcc_ex.h
32blit-stm32/Drivers/STM32H7xx_HAL_Driver/Src/: stm32h7xx_hal_rcc_ex.c
32blit-stm32/Inc/: 32blit.h  CDCCommandStream.h  display.hpp  executable.hpp  fatfs_sd.h  jpeg.hpp  main.h
32blit-stm32/Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Src/: usbd_cdc.c
32blit-stm32/Middlewares/ST/STM32_USB_Device_Library/Class/MSC/Src/: usbd_msc.c
32blit-stm32/Middlewares/ST/STM32_USB_Device_Library/Core/Inc/: usbd_def.h
32blit-stm32/Middlewares/ST/STM32_USB_Device_Library/Core/Src/: usbd_ctlreq.c
32blit-stm32/Middlewares/ST/STM32_USB_Host_Library/Class/CDC/Src/: usbh_cdc.c
32blit-stm32/Src/: 32blit.c  32blit.cpp  CDCCommandStream.cpp  adc.c  display.cpp  dma.c  fake-fs.cpp  fatfs_sd.c  gpio.cpp  i2c.c  jpeg.cpp  main.c  sound.cpp  stm32h7xx_hal_msp.c  stm32h7xx_it.c  tim.c  usart.c  usb-cdc.cpp  usb-serial.cpp  usb_device.c  usbd_conf.c  usbd_storage_if.c  usbh_conf.c
32blit-stm32/Src/SystemMenu/: about_menu.cpp  battery_menu.cpp  connectivity_menu.cpp  firmware_menu.cpp  system_menu_controller.cpp
32blit-teensy41/: CMakeLists.txt  display.cpp  display.hpp  executable.cmake  main.cpp
32blit/engine/: api_private.hpp  engine.cpp  engine.hpp  file.hpp  input.cpp  input.hpp  menu.hpp  profiler.cpp  profiler.hpp  running_average.hpp  version.cpp
32blit/graphics/: blend.cpp  jpeg.cpp  mode7.cpp  mode7.hpp  primitive.cpp  surface.cpp  surface.hpp  text.cpp  tilemap.cpp  tilemap.hpp
32blit/types/: point.hpp  rect.hpp  vec2.cpp  vec2.hpp  vec3.cpp  vec3.hpp
ci/: install_sdl_macos.sh  install_sdl_mingw.sh  install_sdl_vs.sh
docs/: OpenOCD.md  Windows-VisualStudio.md  Windows-WSL.md  pico.md
examples/: CMakeLists.txt  audio-test.wasm  audio-wave.wasm  doom-fire.js  doom-fire.wasm  fizzlefade.wasm  flight.wasm  geometry.wasm  hardware-test.wasm  jpeg.wasm  logo.wasm  matrix-test.js  matrix-test.wasm  metadata-test.wasm  mp3.wasm  multiplayer.wasm  palette-cycle.wasm  palette-swap.wasm  particle.wasm  piano.wasm  platformer.wasm  profiler-test.wasm  raycaster.wasm  rotozoom.wasm  saves.wasm  scrolly-tile.wasm  serial-debug.wasm  shmup.wasm  sprite-test.wasm  text.wasm  tilemap-test.wasm  tilt.wasm  timer-test.wasm  tunnel.wasm  tween-demo.wasm  tween-test.wasm  voxel.wasm  waveform-demo.wasm
examples/animated_gif/: AnimatedGIF.cpp  AnimatedGIF.h
examples/blink/: CMakeLists.txt  blink.cpp
examples/flight/: assets.yml  flight.cpp  flight.hpp
examples/flight/assets/: flight.tmx
examples/hardware-test/: hardware-test.cpp
examples/logo/: logo.cpp
examples/mp3/: mp3.cpp
examples/multiplayer/: multiplayer.cpp
examples/saves/: saves.cpp
examples/serial-debug/: serial-debug.cpp
examples/text/: assets.yml  text.cpp
firmware/: firmware.cpp  firmware.hpp
firmware-update/: firmware-update.cpp
firmware/flash-loader/: flash-loader.cpp  flash-loader.hpp
hardware/: STM32H750VBTx.ioc
launcher/: credits.cpp  launcher.cpp  update-contributors.py
launcher-shared/: dialog.hpp  executable.hpp  metadata.hpp
tools/src/: 32Blit.cpp
vs/sdl/: sdl2-config.cmake
